chore: rename package to github.com/petersenjoern/devenv

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,45 @@
+# Project-specific files
 setup-inspiration.txt
 bash-installation-scripts-inspiration.txt
 PLAN.md
 PLANNING.md
+
+# Built application binaries
+/devenv
+/cmd/devenv
+
+# Go build artifacts
+# Binaries for programs and plugins
+*.exe
+*.exe~
+*.dll
+*.so
+*.dylib
+
+# Test binary, built with `go test -c`
+*.test
+
+# Output of the go coverage tool, specifically when used with LiteIDE
+*.out
+
+# Dependency directories (remove the comment below to include it)
+# vendor/
+
+# Go workspace file
+go.work
+
+# Go mod cache
+go.sum.backup
+
+
+# Environment files
+.env
+.env.local
+.env.*.local
+
+# Logs
+*.log
+
+# Temporary files
+*.tmp
+*.temp
