chore: set binaryPath when binary has been found on OS

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ setup-inspiration.txt
 bash-installation-scripts-inspiration.txt
 PLAN.md
 PLANNING.md
+logs
 
 # Built application binaries
 /devenv
